# Retrovue

./: .cursorrules  .gitignore  AI-Assistant-Methodology.md  API_SEPARATION_COMPLETE.md  ARCHITECTURE.md  CAPABILITIES_ERROR_FIXED.md  CLEANUP_AFTER_PHASE_6.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  CONTENT_SOURCES_IMPLEMENTATION_COMPLETE.md  CONTENT_SOURCES_PLAN.md  CONTRACT_ENFORCEMENT.md  CONTRACT_FULFILLMENT_ANALYSIS.md  CONTRIBUTING.md  DATABASE_INTEGRATION_COMPLETE.md  DEVELOPMENT_STANDARDS.md  IMPORTER_FRAMEWORK_PLAN.md  IMPORT_ERRORS_FIXED.md  INSTALL_PYTHON312.md  LIBRARY_FEATURES_ADDED.md  LIBRARY_PERSISTENCE_ADDED.md  LIMITATIONS_FIXED.md  MAPPINGS_TABLE_ERROR_FIXED.md  MIGRATION_NOTES.md  MODIFY_DIALOG_ELIMINATED.md  MODIFY_DIALOG_FIXED.md  MONOLITHIC_FUNCTIONALITY_MIGRATED.md  Makefile  PHASE_1_COMPLETE.md  PHASE_7_COMPLETE.md  PHASE_7_FINAL_SUMMARY.md  PHASE_7_IMPROVEMENTS.md  PHASE_8_COMPLETE.md  PHASE_8_PLAN.md  PLEX_CONFIG_DIALOG_FIXED.md  PLEX_CONFIG_FIXES.md  PLEX_INTEGRATION_DOCUMENTATION.md  PLEX_INTEGRATION_OPTIMIZATION_SUMMARY.md  PROGRESS_IMPROVEMENTS.md  README_test.md  (+28 more)
RearchitecturePrompts/: 0 - Foundation.md  1 - Introduce layered structure + packages.md  10 - Dev environment (docker-compose.dev) + CI.md  11 - Migration shim keep Plex workflows working.md  12 - Quick filename parser for FS importer + confidence scoring.md  13 - Review UI skeleton (optional, API-first).md  2 - Domain model + ORM + migrations.md  3 - App services facade (single source of truth).md  4 - Plugin interfaces Importers + Enrichers + registry.md  5 - Ingest pipeline (provider-agnostic) + review queue.md  6 - Make CLI call services (Typer), keep JSON output.md  7 - Config, logging, metrics.md  8 - HLS-first output contract for playout (+ docs only for now).md  9 - Docs architecture, API, importer enricher how-to.md
alembic/: env.py
cli/: db_utils.py  plex_sync.py
docs/: ARCHITECTURE.md  CLI.md  CONFIGURATION.md  DB_SCHEMA.md  DEVELOPMENT_STANDARDS.md  ENRICHERS.md  GLOSSARY.md  IMPORTERS.md  INDEX.md  MIGRATION_NOTES.md  PLAYOUT.md  QUICKSTART.md  README.md  README_DB_RESET.md  REVIEW.md  STREAMING_PIPELINE_CONCEPTS.md  STYLEGUIDE.md  VERIFICATION_REPORT.md  development-roadmap.md
documentation/: INDEX.md  README.md  architecture.md  database-schema.md  development-roadmap.md  plex-sync-cli.md  quick-start.md  streaming-engine.md
examples/: async_streaming_demo.py  async_streaming_example.py  compression_middleware_demo.py  concat_generator_demo.py  copy_mode_validation_demo.py  ffmpeg_cmd_example.py  masterclock_usage.py
scripts/: check_db.py  check_no_qt.py  db_reset.py  db_reset.sh  debug_add.py  dev.ps1  lint.ps1  smoke.ps1  smoke.sh  smoke_e2e.ps1  smoke_test.py  smoke_test_simple.py  test.ps1  test_db_connection.py  test_hls_generation.py  test_vlc_playback.py  type.ps1
src/: __init__.py
test_final/: index.m3u8  seg_000000000.ts  seg_000000001.ts  seg_000000002.ts  seg_000000003.ts  seg_000000004.ts  seg_000000005.ts  seg_000000006.ts  seg_000000007.ts  seg_000000008.ts  seg_000000009.ts  seg_000000010.ts  seg_000000011.ts  seg_000000012.ts  seg_000000013.ts  seg_000000014.ts  seg_000000015.ts  seg_000000016.ts  seg_000000017.ts  seg_000000018.ts  seg_000000019.ts  seg_000000020.ts  seg_000000021.ts  seg_000000022.ts  seg_000000023.ts  seg_000000024.ts  seg_000000025.ts  seg_000000026.ts  seg_000000027.ts  seg_000000028.ts  seg_000000029.ts  seg_000000030.ts  seg_000000031.ts  seg_000000032.ts  seg_000000033.ts  seg_000000034.ts  seg_000000035.ts  seg_000000036.ts  seg_000000037.ts  seg_000000038.ts  (+210 more)
tests/: CONTRACT_MIGRATION.md  conftest.py  test_architecture_guard.py  test_broadcast_channel_service.py  test_cli.py  test_compliance_reporting.py  test_config_defaults.py  test_copy_mode_validation.py  test_guid.py  test_low_latency_presets.py  test_missing_uuid_columns.py  test_no_qt_left.py  test_pathmap.py  test_validation.py
tools/: README.md  dev_sync.py
(+700 files in other folders)
