[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retrovue"
version = "0.1.0"
description = "A modern media library management system"
authors = [{name = "Retrovue Team"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2",
    "typer>=0.12",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.10.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.0.0",
    "prometheus-client>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-requests",
]

[project.scripts]
retrovue = "retrovue.cli.main:cli"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
extend-exclude = [
  "frontend", "dist", "build", "venv", ".venv",
  "alembic", "examples", "scripts", "tests", "tools",
  "example_session.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203", "E501", "B905", "B008", "B904"]

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["F401", "F841", "E402", "E501"]
"**/__init__.py" = ["F401"]
"tests/**/*" = ["E501", "F841"]
"tools/*.py" = ["F401", "F841", "E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
pythonpath = ["src"]
exclude = "(^|/)alembic/"

[[tool.mypy.overrides]]
module = [
    "requests.*",
    "typer.*",
    "fastapi.*",
    "uvicorn.*",
    "sqlalchemy.*",
    "alembic.*",
    "structlog.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q --tb=short"
xfail_strict = false
